--- a/DesignPatterns/DesignPatterns.csproj
+++ b/DesignPatterns/DesignPatterns.csproj
@@ -12,4 +12,10 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="src\GOF\Behavioral\Mediator\create.sql">
+      <SubType>Code</SubType>
+    </None>
+  </ItemGroup>
+
 </Project>
